--- a/index.html
+++ b/index.html
@@ -559,7 +559,11 @@
             </label>
           </div>
 
-          <button class="button button--active button--user-data-modal-window" type="submit">
+          <button
+            class="button button--active button--user-data-modal-window"
+            type="submit"
+            data-modal-close2
+          >
             Відправити
           </button>
         </form>
